2009-09-08  <piumarta@ubuntu.piumarta.com>

	* plugins/ClipboardExtendedPlugin/config.cmake: Added: disable
	plugin if X11 not found.

2009-09-02    <piumarta@ubuntu.piumarta.com>

	* plugins/FileCopyPlugin/sqUnixFileCopyPlugin.c (copy): Repeat
	read()/write() as required by EINTR or partial transfer.

	* plugins/SecurityPlugin/sqUnixSecurity.c (isAccessiblePathName):
	Explicitly ignore the result of realpath();

	* vm-display-X11/sqUnixX11.c (xError): Reconile format conversions
	and argument types in printf().

	* vm-display-X11/sqUnixX11.c (openXDisplay): Explicitly ignore the
	result of write().

	* vm/sqUnixMain.c (pathCopyAbs): Explicitly ignore the result of
	getcwd().

2009-08-31    <piumarta@ubuntu.piumarta.com>

	* plugins/B3DAcceleratorPlugin/config.cmake: Don't look for gl.h
	unless some kind of GL was already found.

2009-08-31  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SqueakFFIPrims/config.cmake: Compile .S using gcc if
	possible.

	* vm/sqUnixExternalPrims.c: Include limits.h instead of
	sys/param.h to get PATH_MAX.

2009-08-31    <piumarta@ubuntu.piumarta.com>

	* vm/config.cmake: Disable OpenGL and AGL if --without-gl.

	* plugins/B3DAcceleratorPlugin/config.cmake: Disable plugin if
	neither OPENGL nor AGL are available.

	* cmake/configure (Usage): Document --without-gl and
	--without-SUGAR in help message.

	* vm/config.cmake: Configure SUGAR as 1 unless --without-SUGAR.

	* plugins/SqueakFFIPrims/config.cmake: Correctly detect arch and
	abi.  Enable ASM language.

2009-08-31  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* src/plugins/UnixOSProcessPlugin: Updated to version 20.

2009-08-30    <piumarta@ubuntu.piumarta.com>

	* vm/sqUnixMain.c (main): squeakPlugin path defaults to VM
	executable directory.

	* plugins/SqueakFFIPrims/config.cmake: Explicitly include
	generated source in plugin_sources.

	* vm/sqUnixExternalPrims.c (ioLoadModule): squeakPlugins can